add jna-libc dependency create classes for unix os information implementation

--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,17 @@
             <version>4.11</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>jna-unix</groupId>
+            <artifactId>jna-libc</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.14.8</version>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
     
     <reporting>
